--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Wallet</string>
+    <string name="app_name">Capital</string>
     <string name="title_home">Main</string>
     <string name="title_dashboard">Rankings</string>
     <string name="title_notifications">LK</string>
